fixed everything except margins on tablet

--- a/src/styles/blocks/benefits.scss
+++ b/src/styles/blocks/benefits.scss
@@ -14,6 +14,7 @@
 
     @include tablet {
       flex-basis: 40%;
+      margin-right: 0;
     }
 
     @include phone {
