--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -72,14 +72,18 @@
       align-self: flex-end;
     }
     &__nav-list {
-      position: fixed;
+      position: absolute;
+      margin: 48px 0 0;
       display: none;
-      top: 20px;
+      height: 100vh;
+      top: 0;
+      bottom: 0;
       left: 0;
       right: 0;
       z-index: 2;
       cursor: pointer;
       background-color: $c-gray;
+      opacity: 0.8;
     }
 
     &__checkbox:checked ~ .header__nav-list {
