--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,8 @@
 .page {
   margin: 0;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
   background-color: #f6f6f6;
   &__header {
     margin: 5px auto;
@@ -52,8 +55,8 @@
 
   &__link-to-top {
     position: fixed;
-    right: 15vw;
-    bottom: 15vh;
+    right: 2vw;
+    bottom: 10vh;
 
     @extend %link;
     font-size: 32px;
