--- a/src/styles/blocks/questions.scss
+++ b/src/styles/blocks/questions.scss
@@ -1,13 +1,16 @@
 .questions {
-  width: $narrow-block;
+  max-width: $narrow-block;
   height: 273px;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
 
   &__heading {
+    max-width: 500px;
     margin-top: 5px;
     margin-right: 10px;
-    align-self: flex-start;
-    justify-self: flex-start;
+    justify-self: end;
+    // justify-self: flex-start;
   }
 
   &__form {
