--- a/src/styles/blocks/technology.scss
+++ b/src/styles/blocks/technology.scss
@@ -10,12 +10,15 @@
 
   &__image-wrapper {
     position: relative;
-    height: 545px;
+    height: 768px;
     background-image: url("../images/fourth_pic.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: left;
+    background-position: top left;
 
+    @media (min-width: 2559px) {
+      height: 1050px;
+    }
   }
 
   @include phone {
