--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,5 @@
 $c-gray: #eee;
-$desktop-width: 95%;
+$desktop-width: 95vw;
 $sensible-width: 1440px;
 $narrow-block: 75%;
 $background-pic-height: 590px;
